force-app/main/default/objects/NI_Corporate_Priority_Requests__c/NI_Corporate_Priority_Requests__c.object-meta.xml
<CustomObject>
    <description>Salesforce.com Change Request: NICC-008683

Need a new Object for Rami and Dan O&apos;Keefe to manage priority requests from corporate customers</description>
    <label>Corporate Priority Requests</label>
    <nameField>
        <displayFormat>PR - {0000000}</displayFormat>
        <label>Corporate Priority Requests Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Corporate Priority Requests</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>