force-app/main/default/objects/NI_Corporate_Priority_Requests__c/fields/Analysis_Age__c.field-meta.xml
<CustomField>
    <fullName>Analysis_Age__c</fullName>
    <label>Analysis Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>