force-app/main/default/objects/NI_Corporate_Priority_Requests__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Corporate Priority Requests</relationshipLabel>
    <relationshipName>Corporate_Priority_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>