force-app/main/default/objects/NI_Corporate_Priority_Requests__c/fields/Cancelled_Date__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cancelled Date</label>
    <type>Date</type>
</CustomField>