force-app/main/default/objects/NI_Corporate_Priority_Requests__c/fields/Commited__c.field-meta.xml
<CustomField>
    <fullName>Commited__c</fullName>
    <label>Committed?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Committed</fullName>
                <default>true</default>
                <label>Not Committed</label>
            </value>
            <value>
                <fullName>Committed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>