force-app/main/default/objects/NI_Corporate_Priority_Requests__c/fields/CPR_Phase__c.field-meta.xml
<CustomField>
    <fullName>CPR_Phase__c</fullName>
    <label>CPR - Phase</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Analysis</fullName>
                <default>true</default>
                <label>Analysis</label>
            </value>
            <value>
                <fullName>Plan</fullName>
            </value>
            <value>
                <fullName>Develop</fullName>
            </value>
            <value>
                <fullName>Deploy</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>