force-app/main/default/objects/NI_Corporate_Priority_Requests__c/fields/Custom_Service_Request__c.field-meta.xml
<CustomField>
    <fullName>Custom_Service_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Custom Service Request</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Corporate Priority Requests</relationshipLabel>
    <relationshipName>Corporate_Priority_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>