force-app/main/default/objects/NI_Corporate_Priority_Requests__c/fields/Deploy_Age_Formula__c.field-meta.xml
<CustomField>
    <fullName>Deploy_Age_Formula__c</fullName>
    <formula>IF(AND(NOT(ISBLANK(Deploy_Date__c)), ISBLANK(Deploy_End_Date__c)) , TODAY() - Deploy_Date__c, 
IF(AND(NOT(ISBLANK(Deploy_Date__c)),NOT(ISBLANK(Deploy_End_Date__c))) , Deploy_End_Date__c - Deploy_Date__c,0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The number of days between the Deploy Start Date and Deploy End Date. If the Deploy End Date is blank, this field shows the number of days between the Deploy Start Date and the today&apos;s date.</inlineHelpText>
    <label>Deploy Age (Formula)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>