force-app/main/default/objects/NI_Corporate_Priority_Requests__c/fields/Deploy_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Deploy_End_Date__c</fullName>
    <description>Salesforce.com Change Request: NICC-010916</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The date the &quot;Deploy&quot; phase ended</inlineHelpText>
    <label>Deploy End Date</label>
    <type>Date</type>
</CustomField>