force-app/main/default/objects/NI_Corporate_Priority_Requests__c/fields/Develop_Age_Formula__c.field-meta.xml
<CustomField>
    <fullName>Develop_Age_Formula__c</fullName>
    <formula>IF(AND(NOT(ISBLANK(Develop_Date__c)), ISBLANK(Develop_End_Date__c)) , TODAY() - Develop_Date__c, 
IF(AND(NOT(ISBLANK(Develop_Date__c)),NOT(ISBLANK(Develop_End_Date__c))) , Develop_End_Date__c - Develop_Date__c,0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The number of days between the Develop Start Date and Develop End Date. If the Develop End Date is blank, this field shows the number of days between the Develop Start Date and the today&apos;s date.</inlineHelpText>
    <label>Develop Age (Formula)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>