force-app/main/default/objects/NI_Corporate_Priority_Requests__c/fields/Market_Problem__c.field-meta.xml
<CustomField>
    <fullName>Market_Problem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Salesforce.com Change Request: NICC-010916</description>
    <inlineHelpText>The related Market Problem</inlineHelpText>
    <label>Market Problem</label>
    <referenceTo>NI_Market_Problem__c</referenceTo>
    <relationshipLabel>Corporate Priority Requests</relationshipLabel>
    <relationshipName>Corporate_Priority_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>