force-app/main/default/objects/NI_Corporate_Priority_Requests__c/fields/Newmarket_Position__c.field-meta.xml
<CustomField>
    <fullName>Newmarket_Position__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Contextual information about the general Newmarket position on any given item</inlineHelpText>
    <label>Newmarket Position</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>