force-app/main/default/objects/NI_Corporate_Priority_Requests__c/fields/Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Opportunities__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Corporate Priority Requests</relationshipLabel>
    <relationshipName>Corporate_Priority_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>