force-app/main/default/objects/NI_Corporate_Priority_Requests__c/fields/Plan_Age__c.field-meta.xml
<CustomField>
    <fullName>Plan_Age__c</fullName>
    <label>Plan Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>