force-app/main/default/objects/NI_Corporate_Priority_Requests__c/fields/Plan_Date__c.field-meta.xml
<CustomField>
    <fullName>Plan_Date__c</fullName>
    <description>The date that the &quot;Plan&quot; phase started</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The date that the &quot;Plan&quot; phase started</inlineHelpText>
    <label>Plan Date</label>
    <type>Date</type>
</CustomField>