force-app/main/default/objects/NI_Corporate_Priority_Requests__c/fields/Plan_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Plan_End_Date__c</fullName>
    <description>Salesforce.com Change Request: NICC-010916</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The date the &quot;Plan&quot; phase ended</inlineHelpText>
    <label>Plan End Date</label>
    <type>Date</type>
</CustomField>