force-app/main/default/objects/NI_Corporate_Priority_Requests__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>Priority of the Request</description>
    <inlineHelpText>Priority of the Request</inlineHelpText>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Not urgent</fullName>
            </value>
            <value>
                <fullName>Urgent/Critical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>