force-app/main/default/objects/NI_Corporate_Priority_Requests__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Type__c</columns>
    <columns>CPR_Account__c</columns>
    <columns>Target_Due_Date__c</columns>
    <columns>Commited__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>